--- a/styles.css
+++ b/styles.css
@@ -1,349 +1,486 @@
 *, *::after, *::before {
-
   box-sizing: border-box;
-
   font-family: Arial;
-
 }
 
 body {
-
   background-color: hsl(240, 3%, 7%);
-
   display: flex;
-
   flex-direction: column;
-
   min-height: 100vh;
-
   margin: 0;
-
   padding: 1em;
-
   font-size: clamp(.5rem, 2.5vmin, 1.5rem);
-
+  align-content: center;
 }
-p{
-  color: lightgrey; font-family: monospace; font-size: 15px; text-align: center;}
+
 .keyboard {
-
   display: grid;
-
   grid-template-columns: repeat(20, minmax(auto, 1.25em));
-
   grid-auto-rows: 3em;
-
   gap: .25em;
-
   justify-content: center;
-
 }
 
 .key {
-
   font-size: inherit;
-
   grid-column: span 2;
-
   border: none;
-
   padding: 0;
-
   display: flex;
-
   justify-content: center;
-
   align-items: center;
-
   background-color: hsl(
-
     var(--hue, 200),
-
     var(--saturation, 1%),
-
     calc(var(--lightness-offset, 0%) + var(--lightness, 51%))
-
   );
-
   color: white;
-
   fill: white;
-
   text-transform: uppercase;
-
   border-radius: .25em;
-
   cursor: pointer;
-
   user-select: none;
-
 }
 
 .key.large {
-
   grid-column: span 3;
-
 }
 
 .key > svg {
-
   width: 1.75em;
-
   height: 1.75em;
-
 }
 
 .key:hover, .key:focus {
-
   --lightness-offset: 10%;
-
 }
 
 .key.wrong {
-
   --lightness: 23%;
-
 }
 
 .key.wrong-location {
-
   --hue: 49;
-
   --saturation: 51%;
-
   --lightness: 47%;
-
 }
 
 .key.correct {
-
   --hue: 115;
-
   --saturation: 29%;
-
   --lightness: 43%;
-
 }
 
 .guess-grid {
-
   display: grid;
-
   justify-content: center;
-
   align-content: center;
-
   flex-grow: 1;
-
   grid-template-columns: repeat(5, 4em);
-
   grid-template-rows: repeat(6, 4em);
-
   gap: .25em;
-
   margin-bottom: 1em;
-
 }
 
 .tile {
-
   font-size: 2em;
-
   color: white;
-
   border: .05em solid hsl(240, 2%, 23%);
-
   text-transform: uppercase;
-
   font-weight: bold;
-
   display: flex;
-
   justify-content: center;
-
   align-items: center;
-
   user-select: none;
-
   transition: transform 250ms linear;
-
 }
 
 .tile[data-state="active"] {
-
   border-color: hsl(200, 1%, 34%);
-
 }
 
 .tile[data-state="wrong"] {
-
   border: none;
-
   background-color: hsl(240, 2%, 23%);
-
 }
 
 .tile[data-state="wrong-location"] {
-
   border: none;
-
   background-color: hsl(49, 51%, 47%);
-
 }
 
 .tile[data-state="correct"] {
-
   border: none;
-
   background-color: hsl(115, 29%, 43%);
-
 }
 
 .tile.shake {
-
   animation: shake 250ms ease-in-out;
-
 }
 
 .tile.dance {
-
   animation: dance 500ms ease-in-out;
-
 }
 
 .tile.flip {
-
   transform: rotateX(90deg);
-
 }
 
 @keyframes shake {
-
   10% {
-
     transform: translateX(-5%);
-
   }
 
   30% {
-
     transform: translateX(5%);
-
   }
 
   50% {
-
     transform: translateX(-7.5%);
-
   }
 
   70% {
-
     transform: translateX(7.5%);
-
   }
 
   90% {
-
     transform: translateX(-5%);
-
   }
 
   100% {
-
     transform: translateX(0);
-
   }
-
 }
 
 @keyframes dance {
-
   20% {
-
     transform: translateY(-50%);
-
   }  
 
   40% {
-
     transform: translateY(5%);
-
   }  
 
   60% {
-
     transform: translateY(-25%);
-
   }  
 
   80% {
-
     transform: translateY(2.5%);
-
   }  
 
   90% {
-
     transform: translateY(-5%);
-
   }  
 
   100% {
-
     transform: translateY(0);
-
   }
-
 }
 
 .alert-container {
-
   position: fixed;
-
   top: 10vh;
-
   left: 50vw;
-
   transform: translateX(-50%);
-
   z-index: 1;
-
   display: flex;
-
   flex-direction: column;
-
   align-items: center;
-
 }
 
 .alert {
-
   pointer-events: none;
-
   background-color: hsl(204, 7%, 85%);
-
   padding: .75em;
-
   border-radius: .25em;
-
   opacity: 1;
-
   transition: opacity 500ms ease-in-out;
-
   margin-bottom: .5em;
-
 }
 
 .alert:last-child {
-
   margin-bottom: 0;
-
 }
 
 .alert.hide {
-
   opacity: 0;
-
 }
 
+#resultBoard{
+  text-align: center;
+}
+/*
+button {
+    color:#08233E;
+    font:2.4em Futura, ‘Century Gothic’, AppleGothic, sans-serif;
+    font-size:70%;
+    width: 150px;
+    border: 1px solid gray;
+    border-radius: 25px;
+    /* ... other rules ... */
+    /*cursor:pointer;
+}
+*/
+button:hover {
+    background-color:rgba(255,204,0,0.8);
+}
+h2{
+  text-align: center;
+  color: ghostwhite;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 900;
+  font-size: 60px;
+}
+.container{
+  text-align: center;
+  font-size: 45px;
+  padding: 2px;
+  border: 2px solid ghostwhite;
+  z-index: 100;
+position: fixed;
+width: 600px;
+height: 600px;
+top: 50%;
+left: 50%;
+margin-top: -100px; /* Negative half of height. */
+margin-left: -250px; /* Negative half of width. */
+}
+
+@import url('https://fonts.googleapis.com/css?family=Oswald:700');
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+
+#rotate-words {
+  max-width:400px;
+  margin:auto;
+  padding:20% 0;
+  font-size:2.2em;
+  text-transform:uppercase;
+  font-family: 'Oswald', sans-serif;
+  color: snow;
+}
+#rotate-words span {
+  display:block;
+  height:50px;
+  font-size:.7em;
+  text-transform:lowercase;
+  opacity:.8;
+  font-family: 'Rubik', sans-serif;
+}
+
+#rotate-words div {
+ position:absolute;
+ opacity:0;
+ overflow:hidden;
+ left:10vw;
+ width:80vw;
+ line-height:1.2em;
+ animation: rotate-word 32s linear infinite 0s;
+}
+
+@keyframes rotate-word {
+    0% { opacity: 0;  transform: translateX(0);filter:blur(10px);transform:scale(1.2)}
+    3% { opacity: 1;  transform: translateX(0);filter:blur(0px);transform:scale(.9)}
+    12% { opacity: 1; transform: translateX(0);filter:blur(0px);transform:scale(1)}
+    16% { opacity: 0; transform: translateX(0);filter:blur(10px);transform:scale(1.2)}
+    80% { opacity: 0}
+    100% { opacity: 0}
+}
+
+#rotate-words div:nth-child(2) { animation-delay: 4s}
+#rotate-words div:nth-child(3) { animation-delay: 8s}
+#rotate-words div:nth-child(4) { animation-delay: 12s}
+#rotate-words div:nth-child(5) { animation-delay: 16s}
+#rotate-words div:nth-child(6) { animation-delay: 20s}
+#rotate-words div:nth-child(7) { animation-delay: 24s}
+#rotate-words div:nth-child(8) { animation-delay: 28s}
+
+@keyframes author {
+    0% { opacity: 0;  transform: translateY(100px);filter:blur(10px);transform: scaleY(2)}
+    20% { opacity:0; transform: translateY(200px);filter:blur(10px); transform: scaleY(2)}
+    30% { opacity:1; transform: translateY(0);filter:blur(0px);transform: scaleY(1)}
+    90% { opacity:1; transform: translateY(0);filter:blur(0px);transform: scaleY(.9)}
+    100% { opacity:0; transform: translateY(0);filter:blur(10px);transform: scale(2)}
+}
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Anton|Roboto');
+.word {
+  font-family: 'Anton', sans-serif;
+  perspective: 1000px; 
+  color: deepskyblue;
+  background: transparent;
+}
+
+.word span {
+  cursor: pointer;
+  display: inline-block;
+  font-size: 100px;
+  user-select: none;
+  line-height: .8;
+}
+.word span:nth-child(1).active {
+  animation: balance 1.5s ease-out;
+  transform-origin: bottom left;
+  background: transparent;
+}
+@keyframes balance {
+  0%, 100% {
+    transform: rotate(0deg);
+  }
+  
+  30%, 60% {
+    transform: rotate(-45deg);
+  }
+}
+.word span:nth-child(2).active {
+  animation: shrinkjump 1s ease-in-out;
+  transform-origin: bottom center;
+  background: transparent;
+}
+@keyframes shrinkjump {
+  10%, 35% {
+    transform: scale(2, .2) translate(0, 0);
+  }
+  
+  45%, 50% {
+    transform: scale(1) translate(0, -150px);
+  }
+  
+  80% {
+    transform: scale(1) translate(0, 0);
+  }
+}
+
+.word span:nth-child(3).active {
+  animation: falling 2s ease-out;
+  transform-origin: bottom center;
+  background: transparent;
+}
+
+@keyframes falling {
+  12% {
+    transform: rotateX(240deg);
+  }
+  
+  24% {
+    transform: rotateX(150deg);
+  }
+  
+  36% {
+    transform: rotateX(200deg);
+  }
+  
+  48% {
+    transform: rotateX(175deg);
+  }
+  
+  60%, 85% {
+    transform: rotateX(180deg);
+  }
+  
+  100% {
+    transform: rotateX(0deg);
+  }
+}
+
+.word span:nth-child(4).active {
+  animation: rotate 1s ease-out;
+  background: transparent;
+}
+
+@keyframes rotate {
+  20%, 80% {
+    transform: rotateY(180deg);
+  }
+  
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+.word span:nth-child(5).active {
+  animation: toplong 1.5s linear;
+  background: transparent;
+}
+
+@keyframes toplong {
+  10%, 40% {
+    transform: translateY(-48vh) scaleY(1);
+  }
+  
+  90% {
+    transform: translateY(-48vh) scaleY(4);
+  }
+}
+
+.word span:nth-child(5).active {
+  animation: toplong 1.5s linear;
+  background: transparent;
+}
+
+@keyframes toplong {
+  20%, 30% {
+    transform: translateY(-42vh) scaleY(2);
+  }
+  
+  88% {
+    transform: translateY(-48vh) scaleY(4);
+  }
+}
+
+.word span:nth-child(6).active {
+  animation: toplong 1.5s linear;
+  background: transparent;
+}
+
+@keyframes toplong {
+  12%, 45% {
+    transform: translateY(-38vh) scaleY(3);
+  }
+  
+  70% {
+    transform: translateY(-48vh) scaleY(4);
+  }
+}
+
+
+.fixed {
+  position: relative;
+  top: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.share-button{
+  background: white;
+  z-index: 150;
+  width: 100%;
+  height: 100px;
+}
